--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -22,5 +22,8 @@
   },
   "bugs": {
     "url": "https://github.com/flay-boy/open-cli/issues"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
